add codeclimate coverage reporting

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,14 @@ matrix:
 branches:
   except:
     - gh-pages
+
+env:
+  global:
+    - CC_TEST_REPORTER_ID=bd4ff902b7510abdab3aacd57ceb51a5b2e054fed4100019fcd21e2324a69090
+    - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
